# coding-interview-questions

./: .flake8  .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  recursive-staircase-problem.py  setup.cfg  two_sum.py  utils.py
docs/: bfs.md  binary_search.md  dynamic_programming.md  linked_list.md  priority_queue.md
puzzles/: accounts_merge.py  add-two-numbers.py  add_and_search_word.py  add_binary.py  add_digits.py  add_one_row_to_tree.py  add_strings.py  add_to_array_form_of_integer.py  add_two_numbers.py  all_nodes_distance_k_in_binary_tree.py  all_paths_from_source_to_target.py  all_possible_full_binary_trees.py  array_nesting.py  as_far_from_land_as_possible.py  average_of_levels_in_binary_tree.py  average_salary_excluding_the_minimum_and_maximum_salary.py  backspace_string_compare.py  bag_of_tokens.py  baseball_game.py  basic_calculator.py  beautiful_arrangement.py  best_team_with_no_conflicts.py  best_time_to_buy_and_sell_stock.py  best_time_to_buy_and_sell_stock_ii.py  best_time_to_buy_and_sell_stock_iii.py  best_time_to_buy_and_sell_stock_iv.py  best_time_to_buy_and_sell_stock_with_cooldown.py  best_time_to_buy_and_sell_stock_with_transaction_fee.py  binary_search.py  binary_search_tree_iterator.py  binary_subarrays_with_sum.py  binary_tree_cameras.py  binary_tree_inorder_traversal.py  binary_tree_level_order_traversal.py  binary_tree_maximum_path_sum.py  binary_tree_pruning.py  binary_tree_right_side_view.py  binary_tree_traversal.py  binary_tree_zigzag_level_order_traversal.py  binary_trees_with_factors.py  (+543 more)
scripts/: commit.sh  count.sh  new.py
tests/: test_add_binary.py  (+567 more)
(+2 files in other folders)
