[project]
name = "coding-interview-questions"
version = "0.1.0"
description = ""
authors = [{ name = "Yifan Wu", email = "tyivanwu@gmail.com" }]
dependencies = ["numpy", "sortedcontainers", "dacite"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["pytest", "ipython", "pytest-randomly", "pre-commit"]

[tool.pdm.scripts]
test = "pytest tests"
new = "python scripts/new.py"
count = "./scripts/count.sh"
commit = "./scripts/commit.sh"
lint = "pre-commit run --all-files"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E711", "E712", "E741", "F811", "F841"]
